# ml-training-intensity-prediction

./: .gitignore  README.md  api.py  model_loader.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-freeze.txt  requirements.txt
.github/workflows/: ci.yaml
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/core/: logging_config.py
app/services/: model_loader.py  prediction.py
app/ui/static/css/: style.css
app/ui/static/js/: main.js
app/ui/templates/: index.html
archive/thesis_version/: README.md  api.py
archive/thesis_version/data/processed/: activities_model_ready.parquet
archive/thesis_version/notebooks/: 00_quickstart_guide.ipynb  01_eda_preprocessing.ipynb  02_modeling.ipynb
notebooks/: 00_quickstart_guide.ipynb  01_eda_preprocessing.ipynb  02_modeling.ipynb
tests/: test_lifespan.py  test_model_loader.py  test_prediction.py  test_routes.py  test_schema_validation.py
