[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["archive/", "notebooks/"]

[project]
name = "training-intensity-prediction"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.128.7",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.26",
    "Jinja2==3.1.6",
    "numpy==2.4.2",
    "pandas==3.0.0",
    "pyarrow==23.0.0",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==6.2.1",
    "httpx==0.28.1",
    "ruff==0.13.1",
    "mypy==1.18.2",
    "bandit==1.8.6",
    "pip-audit==2.9.0",
]
